--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <h1>This is a Testpage</h1>
         <p>This us a paragrapl</p>
         <p>kena hai re</p>
+        <p>Hau re sacjo</p>
+        <p>terroe</p>
     </body>
 </html>
